Fixed buttons, they now scroll if yuser zooms in too much.

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ a:visited {
 .App-header {
   height: 5%;
   background-color: #0F1111;
+  position: relative;
 }
 
 .left-side {
@@ -52,12 +53,13 @@ a:visited {
 }
 
 .intro-text {
-  max-height: 200%;
-  height: 100%;
-  width: 100%;
+  height: 50%;
+  width: 90%;
   position: absolute;
   top: 20%;
+  left: 5%;
   text-align: center;
+  overflow-y: auto;
 }
 .primary-heading {
   color: seashell;
@@ -81,7 +83,9 @@ a:visited {
   animation-duration: 1s;
 }
 .intro-links {
-  height: 5vh;
+  height: 10vh;
+  
+  
 }
 
 @keyframes moveInLeft {
@@ -201,6 +205,7 @@ a:visited {
 }
 .AboutMeParagraph {
   height: 30vh;
-  font-size: 2em;
+  font-size: 1.5em;
+  overflow-y: auto;
   text-transform: none;
 }
